--- a/src/pages/products/styles.scss
+++ b/src/pages/products/styles.scss
@@ -63,7 +63,7 @@
   }
 
   .lower-blue-section {
-    margin: 2.6em -20px 0 -20px;
+    margin-top: 2.6em;
 
     &__holder {
       display: flex;
