--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -68,14 +68,7 @@ a.navbar-item.active-item {
   display: flex;
   flex-direction: column;
   height: 100%;
-  // width: 100%;
-  // min-width: 470px;
-  // @include breakpoint(mobile) {
-  //   width: fit-content;
-  // }
-  // @include breakpoint(tablet-up) {
-  //   min-width: 100%;
-  // }
+  width: 100%;
 
   &__content {
     flex: 1 0 auto;
@@ -84,7 +77,7 @@ a.navbar-item.active-item {
       flex: 1;
     }
   }
-  .footer {
+  &__footer {
     margin-top: auto;
     flex-shrink: 0;
   }
